--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:latest
+    image: healenium/hlm-backend:3.1
     ports:
       - "7878:7878"
     links:
