--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>healenium-web-htmlelements</module>
         <module>healenium-web-selenide</module>
         <module>healenium-web-selenium</module>
+        <module>healenium-web-selenium-rp</module>
     </modules>
 
     <properties>
@@ -22,7 +23,7 @@
         <log4j.version>2.13.0</log4j.version>
         <hamcrest.version>2.2</hamcrest.version>
         <webdrivermanager.version>4.2.0</webdrivermanager.version>
-        <healenium.version>3.0.3-beta-8</healenium.version>
+        <healenium.version>3.1-SNAPSHOT</healenium.version>
     </properties>
 
     <dependencies>
