--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>healenium-web-selenide</module>
         <module>healenium-web-selenium</module>
         <module>healenium-web-selenium-rp</module>
+      <module>healenium-web-selenoid</module>
     </modules>
 
     <properties>
