--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>healenium-web-selenide</module>
         <module>healenium-web-selenium</module>
         <module>healenium-web-selenium-rp</module>
-      <module>healenium-web-selenoid</module>
+        <module>healenium-web-selenoid</module>
     </modules>
 
     <properties>
@@ -24,7 +24,7 @@
         <log4j.version>2.13.0</log4j.version>
         <hamcrest.version>2.2</hamcrest.version>
         <webdrivermanager.version>4.2.0</webdrivermanager.version>
-        <healenium.version>3.1-SNAPSHOT</healenium.version>
+        <healenium.version>3.1</healenium.version>
     </properties>
 
     <dependencies>
