updated tests for running in selenoid

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ chromedriver*
 /healenium-web-selenide/target/
 /healenium-web-selenium/target/
 /target/
+/healenium-web-selenide/.allure/
+/healenium-web-selenide/build/
