--- a/healenium-web-selenium-rp/src/test/resources/reportportal.properties
+++ b/healenium-web-selenium-rp/src/test/resources/reportportal.properties
@@ -1,9 +1,9 @@
 rp.endpoint = https://reportportal.epam.com
 
-rp.uuid = your_uuid
+rp.uuid = f2cf8fba-c059-47d6-b6d1-3824b29c9ad9
 
-rp.launch = Healenium_example
+rp.launch = Healenium_run
 
-rp.project = your_project_name
+rp.project = epm-hlm
 
 rp.attributes = healenium;
