--- a/healenium-web-selenoid/pom.xml
+++ b/healenium-web-selenoid/pom.xml
@@ -10,6 +10,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>healenium-web-selenoid</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>2.13.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
