--- a/healenium-web-selenium-rp/src/test/resources/reportportal.properties
+++ b/healenium-web-selenium-rp/src/test/resources/reportportal.properties
@@ -1,6 +1,6 @@
 rp.endpoint = https://reportportal.epam.com
 
-rp.uuid = <your_uuid>
+rp.uuid = 4b8c8180-b890-491c-a578-913fda77719d
 
 rp.launch = Healenium_run
 
