Update unnecessary changes

--- a/healenium-web-selenium-rp/src/test/resources/reportportal.properties
+++ b/healenium-web-selenium-rp/src/test/resources/reportportal.properties
@@ -1,7 +1,7 @@
 rp.endpoint = https://reportportal.epam.com
 
-rp.uuid = 4b8c8180-b890-491c-a578-913fda77719d
+rp.uuid = your_uuid
 
-rp.launch = Healenium_run
+rp.launch = Healenium_example
 
-rp.project = epm-hlm
+rp.project = your_project_name
