--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,6 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <modules>
-        <module>healenium-web-htmlelements</module>
-        <module>healenium-web-selenide</module>
-        <module>healenium-web-selenium</module>
-        <module>healenium-web-selenium-rp</module>
-        <module>healenium-web-selenoid</module>
-    </modules>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -25,6 +17,7 @@
         <hamcrest.version>2.2</hamcrest.version>
         <webdrivermanager.version>4.2.0</webdrivermanager.version>
         <healenium.version>3.1.7</healenium.version>
+        <selenium.version>4.1.1</selenium.version>
     </properties>
 
     <dependencies>
@@ -33,6 +26,19 @@
             <artifactId>healenium-web</artifactId>
             <version>${healenium.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
