--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <selenide.version>6.2.0</selenide.version>
         <jdi.version>1.3.22</jdi.version>
 
-        <healenium.version>3.2.1</healenium.version>
+        <healenium.version>3.2.3</healenium.version>
     </properties>
 
     <dependencies>
@@ -70,6 +70,11 @@
         <dependency>
             <groupId>com.epam.jdi</groupId>
             <artifactId>jdi-light</artifactId>
+            <version>${jdi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.epam.jdi</groupId>
+            <artifactId>jdi-light-html</artifactId>
             <version>${jdi.version}</version>
         </dependency>
 
