--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,3 +1,5 @@
 junit.jupiter.execution.parallel.enabled = false
 junit.jupiter.execution.parallel.mode.default = concurrent
 junit.jupiter.execution.parallel.mode.classes.default = concurrent
+
+junit.jupiter.extensions.autodetection.enabled = true
