--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -1,6 +1,6 @@
 rp.endpoint = https://reportportal.epam.com
 rp.uuid = <uuid>
-rp.launch = Java: full scope
+rp.launch = test
 rp.project = epm-hlm
 rp.description = Web: 3.2.3  Back: 3.2.1
 rp.attributes = Selenium
