--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,5 +1,4 @@
-version: "3.3"
-
+version: "3.9"
 services:
 
   db:
@@ -17,12 +16,11 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:3.2.1
+    image: healenium/hlm-backend:3.2.2
     ports:
       - "7878:7878"
     links:
       - db
-    restart: always
     environment:
       - SPRING_CONTAINER_NAME=healenium
       - SPRING_POSTGRES_DB=healenium
@@ -34,9 +32,12 @@ services:
 
   selector-imitator:
     image: healenium/hlm-selector-imitator:1.1
+    container_name: selector-imitator
     restart: on-failure
     ports:
       - "8000:8000"
+    networks:
+      - healenium
 
 networks:
   healenium:
