--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,5 @@
 driver=chrome
-timeout.wait.element=10
-timeout.wait.page=30
+browser.kill=after
+element.search.strategy = soft
+log.level = STEP
+smart.locators=#%s;[ui=%s]
