--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
-        <junit.version>5.7.0</junit.version>
+        <junit.version>5.8.2</junit.version>
         <log4j.version>2.13.0</log4j.version>
         <aspectj.version>1.9.4</aspectj.version>
         <hamcrest.version>2.2</hamcrest.version>
@@ -26,6 +26,14 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.5</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.epam.healenium</groupId>
             <artifactId>healenium-web</artifactId>
