--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,32 @@
     </properties>
 
     <dependencies>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>net.serenity-bdd</groupId>-->
+<!--            <artifactId>serenity-core</artifactId>-->
+<!--            <version>3.2.5</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>net.serenity-bdd</groupId>-->
+<!--            <artifactId>serenity-junit</artifactId>-->
+<!--            <version>3.2.5</version>-->
+<!--        </dependency>-->
+
+
+        <!--        For selenium 3.141.59 only-->
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.11.0</version>
+        </dependency>
         <dependency>
             <groupId>com.epam.healenium</groupId>
             <artifactId>healenium-web</artifactId>
@@ -108,7 +134,7 @@
             <artifactId>allure-java-commons</artifactId>
             <version>2.17.2</version>
         </dependency>
-        <!--        <dependency>-->
+<!--        <dependency>-->
 <!--            <groupId>org.projectlombok</groupId>-->
 <!--            <artifactId>lombok</artifactId>-->
 <!--            <version>RELEASE</version>-->
@@ -147,7 +173,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.0</version>
                 <configuration>
                     <source>10</source>
                     <target>10</target>
