--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <selenide.version>6.3.4</selenide.version>
         <jdi.version>1.3.22</jdi.version>
 
-        <healenium.version>3.2.4</healenium.version>
+        <healenium.version>${web}</healenium.version>
     </properties>
 
     <dependencies>
