Update hlm-web to 3.2.5

--- a/src/test/resources/healenium.properties
+++ b/src/test/resources/healenium.properties
@@ -1,6 +1,5 @@
-recovery-tries=1
-score-cap=.6
-heal-enabled=true
-serverHost = localhost
-serverPort = 7878
-imitatePort = 8000
+recovery-tries = 1
+score-cap = .6
+heal-enabled = true
+hlm.server.url = http://localhost:7878
+hlm.imitator.url = http://localhost:8000
