--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3.9"
+
 services:
 
   db:
-    image: postgres:11-alpine
+    image: postgres:14.2-bullseye
+    container_name: db
+    restart: always
     ports:
       - "5432:5432"
     volumes:
       - ./db/sql/init.sql:/docker-entrypoint-initdb.d/init.sql
-    restart: always
     environment:
       - POSTGRES_DB=healenium
       - POSTGRES_USER=healenium_user
@@ -17,6 +19,8 @@ services:
 
   healenium:
     image: healenium/hlm-backend:3.2.2
+    container_name: healenium
+    restart: on-failure
     ports:
       - "7878:7878"
     links:
@@ -40,36 +44,43 @@ services:
       - healenium
 
   hlm-proxy:
-    image: healenium/hlm-proxy:0.2.5
+    image: healenium/hlm-proxy:0.2.5.1
     container_name: hlm-proxy
-    volumes:
-      - docker-log-volume:/var/log/dockerlogs
+    restart: on-failure
     ports:
       - "8085:8085"
     environment:
       - "recovery-tries=1"
       - "score-cap=.6"
       - "heal-enabled=true"
-    #      - SELENIUM_HOST=hlm-selenium-webview
-    #      - HEALENIUM_HOST=healenium
-    #      - IMITATE_HOST=selector-imitator
     networks:
       - healenium
 
-  hlm-selenium-webview:
-    image: healenium/hlm-selenium-4-standalone-tigervnc:firefox98.0.1_chrome99.0.4844.82_edge99.0.1150.46
-    restart: on-failure
+  selenoid:
+    image: healenium/hlm-selenoid:0.1.0
     container_name: hlm-selenium-webview
+    restart: on-failure
     ports:
-      - "8086:6080"
       - "4444:4444"
+    environment:
+      - "PROXY_CONTAINER_NAME=hlm-proxy"
     volumes:
-      - docker-log-volume:/var/log/dockerlogs
+      - .:/etc/selenoid/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: ["-container-network", "healenium"]
     networks:
       - healenium
 
-volumes:
-  docker-log-volume:
+  selenoid-ui:
+    image: aerokube/selenoid-ui:1.10.4
+    container_name: hlm-selenium-webview-ui
+    restart: on-failure
+    ports:
+      - "8080:8080"
+    command: ["--selenoid-uri", "http://hlm-selenium-webview:4444"]
+    networks:
+      - healenium
 
 networks:
   healenium:
+    name: healenium
