--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.9"
 services:
 
-  db:
+  postgres-db:
     image: postgres:11-alpine
+    container_name: postgres-db
     ports:
       - "5432:5432"
     volumes:
@@ -16,17 +17,17 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:3.2.2
+    image: healenium/hlm-backend:3.2.3
     ports:
       - "7878:7878"
     links:
-      - db
+      - postgres-db
     environment:
-      - SPRING_CONTAINER_NAME=healenium
       - SPRING_POSTGRES_DB=healenium
+      - SPRING_POSTGRES_SCHEMA=healenium
       - SPRING_POSTGRES_USER=healenium_user
       - SPRING_POSTGRES_PASSWORD=YDk2nmNs4s9aCP6K
-      - SPRING_POSTGRES_URL=jdbc:postgresql://db:5432/healenium?currentSchema=healenium
+      - SPRING_POSTGRES_DB_HOST=postgres-db
     networks:
       - healenium
 
