--- a/infra/docker-compose-proxy-grid.yml
+++ b/infra/docker-compose-proxy-grid.yml
@@ -1,10 +1,9 @@
 version: "3.9"
-
 services:
 
-  db:
+  postgres-db:
     image: postgres:14.2-bullseye
-    container_name: db
+    container_name: postgres-db
     restart: always
     ports:
       - "5432:5432"
@@ -18,19 +17,19 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:3.2.2
+    image: healenium/hlm-backend:3.2.3
     container_name: healenium
     restart: on-failure
     ports:
       - "7878:7878"
     links:
-      - db
+      - postgres-db
     environment:
-      - SPRING_CONTAINER_NAME=healenium
       - SPRING_POSTGRES_DB=healenium
+      - SPRING_POSTGRES_SCHEMA=healenium
       - SPRING_POSTGRES_USER=healenium_user
       - SPRING_POSTGRES_PASSWORD=YDk2nmNs4s9aCP6K
-      - SPRING_POSTGRES_URL=jdbc:postgresql://db:5432/healenium?currentSchema=healenium
+      - SPRING_POSTGRES_DB_HOST=postgres-db
     networks:
       - healenium
 
@@ -44,26 +43,30 @@ services:
       - healenium
 
   hlm-proxy:
-    image: healenium/hlm-proxy:0.2.5.1
+    image: healenium/hlm-proxy:1.0.0
     container_name: hlm-proxy
     restart: on-failure
     ports:
       - "8085:8085"
     environment:
-      - "recovery-tries=1"
-      - "score-cap=.6"
-      - "heal-enabled=true"
+      - RECOVERY_TRIES=1
+      - SCORE_CAP=.6
+      - HEAL_ENABLED=true
+      - SELENIUM_HOST=hlm-selenoid
+      - HEALENIUM_HOST=healenium
+      - IMITATE_HOST=selector-imitator
+      - SELENIUM_URL=/wd/hub
     networks:
       - healenium
 
   selenoid:
     image: healenium/hlm-selenoid:0.1.0
-    container_name: hlm-selenium-webview
+    container_name: hlm-selenoid
     restart: on-failure
     ports:
       - "4444:4444"
     environment:
-      - "PROXY_CONTAINER_NAME=hlm-proxy"
+      - PROXY_CONTAINER_NAME=hlm-proxy
     volumes:
       - .:/etc/selenoid/:ro
       - /var/run/docker.sock:/var/run/docker.sock
@@ -72,12 +75,12 @@ services:
       - healenium
 
   selenoid-ui:
-    image: aerokube/selenoid-ui:1.10.4
-    container_name: hlm-selenium-webview-ui
+    image: aerokube/selenoid-ui:1.10.5
+    container_name: selenoid-ui
     restart: on-failure
     ports:
       - "8080:8080"
-    command: ["--selenoid-uri", "http://hlm-selenium-webview:4444"]
+    command: [ "--selenoid-uri", "http://hlm-selenoid:4444" ]
     networks:
       - healenium
 
