--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,7 +17,9 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:3.2.4
+    image: healenium/hlm-backend:3.2.5
+    container_name: healenium
+    restart: on-failure
     ports:
       - "7878:7878"
     links:
@@ -29,6 +31,7 @@ services:
       - SPRING_POSTGRES_PASSWORD=YDk2nmNs4s9aCP6K
       - SPRING_POSTGRES_DB_HOST=postgres-db
       - KEY_SELECTOR_URL=true
+      - COLLECT_METRICS=true
     networks:
       - healenium
 
