--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - healenium
 
   healenium:
-    image: healenium/hlm-backend:3.2.5
+    image: healenium/hlm-backend:3.3.3
     ports:
       - "7878:7878"
     links:
@@ -28,13 +28,14 @@ services:
       - SPRING_POSTGRES_USER=healenium_user
       - SPRING_POSTGRES_PASSWORD=YDk2nmNs4s9aCP6K
       - SPRING_POSTGRES_DB_HOST=postgres-db
-      - KEY_SELECTOR_URL=true
+      - KEY_SELECTOR_URL=false
       - COLLECT_METRICS=true
+      - HLM_LOG_LEVEL=info
     networks:
       - healenium
 
   selector-imitator:
-    image: healenium/hlm-selector-imitator:1.1
+    image: healenium/hlm-selector-imitator:1.2
     container_name: selector-imitator
     restart: on-failure
     ports:
