--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
         <junit.version>5.7.0</junit.version>
         <log4j.version>2.13.0</log4j.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <webdrivermanager.version>4.2.0</webdrivermanager.version>
+        <webdrivermanager.version>5.5.3</webdrivermanager.version>
 
-        <selenium.version>4.9.0</selenium.version>
+        <selenium.version>4.13.0</selenium.version>
         <selenide.version>6.3.4</selenide.version>
         <jdi.version>1.3.22</jdi.version>
 
-        <healenium.version>3.4.2</healenium.version>
+        <healenium.version>3.4.4</healenium.version>
     </properties>
 
     <dependencies>
@@ -131,6 +131,27 @@
 
     <build>
         <plugins>
+<!--            <plugin>-->
+<!--                <groupId>com.epam.healenium</groupId>-->
+<!--                <artifactId>hlm-report-mvn</artifactId>-->
+<!--                <version>1.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>hlmReport</id>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>initReport</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>hlmReportB</id>-->
+<!--                        <phase>test</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>buildReport</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
