--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
         <hamcrest.version>2.2</hamcrest.version>
         <webdrivermanager.version>5.5.3</webdrivermanager.version>
 
-        <selenium.version>4.15.0</selenium.version>
+        <selenium.version>4.17.0</selenium.version>
         <selenide.version>7.0.0</selenide.version>
         <jdi.version>1.3.22</jdi.version>
 
-        <healenium.version>3.4.6</healenium.version>
+        <healenium.version>3.5.0</healenium.version>
     </properties>
 
     <dependencies>
@@ -120,6 +120,21 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.epam.reportportal</groupId>
+            <artifactId>logger-java-logback</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.epam.reportportal</groupId>
+            <artifactId>agent-java-junit5</artifactId>
+            <version>5.1.10</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.projectlombok</groupId>-->
 <!--            <artifactId>lombok</artifactId>-->
@@ -142,6 +157,17 @@
                 <configuration>
                     <source>10</source>
                     <target>10</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <properties>
+                        <configurationParameters>
+                            junit.jupiter.extensions.autodetection.enabled = true
+                        </configurationParameters>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
